--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,5 @@
-.content {
-    display:flex;
-    align-items:center;
-}
-
-.title {
-    padding-top: 20px;
+#content {
+    display: flex;
+    align-items: center;
+    text-align: center;
 }
