--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,26 @@
+.up-arrow {
+  border: 3px solid black;
+  border-radius: 1px;
+  border-right: 20px;
+  border-top: 20px;
+  position: absolute;
+  pointer-events: visible;
+  transform: rotate(135deg);
+  transform-origin: center;
+  height: 1em;
+  width: 1em;
+}
+
+.bottom-corner {
+  position:absolute;
+  bottom: 20px;
+  right:20px;
+}
+
 .content-body {
-    padding: 20px;
-    top: 100px;
+  padding-top: 20px;
+}
+
+.bottom {
+  background-color: blue;
 }
